fix project grid to look better on mobile

--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -195,8 +195,12 @@ td {
 }
 
 .tabcontent {
-    display: none;
+    // display: none;
     animation: fadeEffect 1.02s;
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 @keyframes fadeEffect {
@@ -211,17 +215,19 @@ td {
 
 /*--- PROJECT GRID STUFF ---*/
 
-#project-grid {
+/* #project-grid {
     display: grid;
     margin: 80px 0;
-    grid-template-columns: auto auto;
-}
+    grid-template-columns: repeat(2, 1fr);
+    // width:50%;
+} */
 
 .pcontainer {
     perspective: 1000px;
 }
 
 .card {
+    width:100%;
     height: 300px;
     text-align: center;
     overflow: hidden;
@@ -233,8 +239,9 @@ td {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-size: 700px;
+    background-size: 1500px;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 /*-- individual project squares*/
@@ -819,7 +826,7 @@ input[type=submit]:hover {
 
 /*--- RESPONSIVENESS ---*/
 
-@media screen and (max-width:700px) {
+@media screen and (max-width:768px) {
 
     /*--- TOP NAV BAR---*/
     .topnav button {
@@ -867,10 +874,6 @@ input[type=submit]:hover {
     }
 
     /*--- PROJECT GRID ---*/
-    #project-grid {
-        margin: 50px 0;
-        grid-template-columns: auto;
-    }
 
     /*-- modals of projects --*/
     .modal-body {
@@ -922,10 +925,6 @@ input[type=submit]:hover {
     }
 
     /*-- project grid*/
-    #project-grid {
-        width: 50%;
-    }
-
     /*-- end of project grid*/
 }
 
